@@ -1,20 +1,0 @@
-{
-  "backup_data_uid": "c8697a5075b3f9d7", 
-  "backup_module_uid": "5e1100048ab875d7", 
-  "backup_module_uoa": "soft", 
-  "control": {
-    "author": "Grigori Fursin", 
-    "author_email": "Grigori.Fursin@cTuning.org", 
-    "author_webpage": "http://fursin.net", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2016-06-20T22:33:40.017000", 
-    "license": "See CK LICENSE.txt for licensing details", 
-    "version": [
-      "1", 
-      "7", 
-      "2dev"
-    ]
-  }, 
-  "data_name": "lib.opencv.android"
-}
