@@ -1,24 +1,0 @@
-{
-  "auto_detect": "yes", 
-  "customize": {
-    "check_that_exists": "yes", 
-    "ck_version": 10, 
-    "env_prefix": "CK_ENV_LIB_OPENCV", 
-    "limit_recursion_dir_search": {
-      "linux": 4 
-    }, 
-    "soft_file": {
-      "linux": "libopencv_core.a" 
-    }, 
-    "only_for_target_os_tags": [
-      "android"
-    ], 
-    "soft_path_example": {
-    }
-  }, 
-  "soft_name": "OpenCV library for Android", 
-  "tags": [
-    "lib", 
-    "opencv"
-  ]
-}
