@@ -14,6 +14,11 @@ import os
 
 def version_cmd(i):
 
+    hosd=i['host_os_dict']
+    tosd=i['target_os_dict']
+
+    win=hosd.get('windows_base','')
+
     ck=i['ck_kernel']
 
     fp=i['full_path']
@@ -23,9 +28,25 @@ def version_cmd(i):
     p0=os.path.basename(fp)
     p1=os.path.dirname(fp)
 
-    lst=os.listdir(p1)
+    px=p1
+    if win=='yes':
+       px=os.path.join(os.path.dirname(p1),'lib')
+    
+    lst=os.listdir(px)
     for fn in lst:
-        if fn.startswith(p0):
+        if win=='yes':
+           if fn.startswith('opencv_core'):
+              j=fn.find('.')
+              if j>0:
+                 ver=fn[11:j]
+                 break
+           elif fn.startswith('opencv_world'):
+              j=fn.find('.')
+              if j>0:
+                 ver=fn[12:j]
+                 break
+
+        elif fn.startswith(p0):
            x=fn[len(p0):]
            if x.startswith('.'):
               ver=x[1:]
@@ -104,21 +125,66 @@ def setup(i):
     elp=hosd.get('env_library_path','')
     if elp=='': elp='LIBRARY_PATH'
 
+    fp=cus.get('full_path','')
+    pl=os.path.dirname(fp)
+    px=os.path.dirname(pl)
+
+    pi=fp
+    found=False
+    while True:
+       if os.path.isdir(os.path.join(pi,'include')):
+          found=True
+          break
+       pix=os.path.dirname(pi)
+       if pix==pi:
+          break
+       pi=pix
+
+    if not found:
+       return {'return':1, 'error':'can\'t find root dir of the OpenCL installation'}
+
     ################################################################
     if remote=='yes':
-       cus['path_bin']=pi+'\\OpenCV-android-sdk\\sdk\\native\\bin'
-       cus['path_lib']=pi+'\\OpenCV-android-sdk\\sdk\\native\\libs\\armeabi'
+#       cus['path_bin']=pi+'\\OpenCV-android-sdk\\sdk\\native\\bin'
+#       cus['path_lib']=pi+'\\OpenCV-android-sdk\\sdk\\native\\libs\\armeabi'
+#
+#       cus['path_include']=pi+'\\opencv-2.4.11\\include'
+#       cus['path_includes']=[pi+'\\opencv-2.4.11\\3rdparty\\include\\opencl\\1.2']
+#
+#       cus['path_static_lib']=cus['path_lib']
+#
+#       cus['static_lib']='libopencv_core.a'
+#
+#       cus['extra_static_libs']={'opencv_imgproc':'libopencv_imgproc.a',
+#                                 'opencv_ocl':'libopencv_ocl.a',
+#                                 'opencv_highgui':'libopencv_highgui.a'}
+#
+#       env['CK_ENV_LIB_OPENCV_STATIC_LIB_PATH']=cus['path_static_lib']
+#
+#       if win=='yes':
+#          s+='\nset '+ellp+'=%CK_ENV_LIB_OPENCV_LIB%;%'+ellp+'%\n'
+#       else:
+#          s+='\nexport '+ellp+'=$CK_ENV_LIB_OPENCV_LIB:$'+ellp+'\n'
 
-       cus['path_include']=pi+'\\opencv-2.4.11\\include'
-       cus['path_includes']=[pi+'\\opencv-2.4.11\\3rdparty\\include\\opencl\\1.2']
+       pinc=os.path.join(p2,'jni','include')
+
+       abi=target_d.get('abi','')
+       if abi=='':
+          abi='armeabi'
+
+       cus['path_lib']=pl
+
+       plx=os.path.join(p1,'3rdparty','libs',abi)
+
+       cus['path_include']=pinc
 
        cus['path_static_lib']=cus['path_lib']
 
        cus['static_lib']='libopencv_core.a'
 
        cus['extra_static_libs']={'opencv_imgproc':'libopencv_imgproc.a',
-                                  'opencv_ocl':'libopencv_ocl.a',
-                                  'opencv_highgui':'libopencv_highgui.a'}
+                                 'opencv_ocl':'libopencv_ocl.a',
+                                 'opencv_highgui':'libopencv_highgui.a'}
 
        env['CK_ENV_LIB_OPENCV_STATIC_LIB_PATH']=cus['path_static_lib']
 
@@ -131,37 +197,26 @@ def setup(i):
        ext='x64'
        if tbits=='32': ext='ia32'
 
-       # Check where bin/libs are installed
-       pc=cus.get('path_extension_configured','')
-       pp=cus.get('path_extension','')
-
-       if pc!='yes' and pp=='':
-          ra=ck.inp({'text':'Enter installation path extension related to compiler (Enter for vc12): '})
-          pp=ra['string'].strip()
-          if pp=='': pp='vc12'
-
-          cus['path_extension']=pp
-          cus['path_extension_configured']='yes'
-
-       cus['path_bin']=pi+ext+'\\'+pp+'\\bin'
-       cus['path_lib']=pi+ext+'\\'+pp+'\\lib'
-
        # Check libs version extensions
-       lec=cus.get('lib_extension_configured','')
-       le=cus.get('lib_extension','')
+       cus['path_bin']=px+'\\bin'
+       cus['path_lib']=px+'\\lib'
 
-       if lec!='yes' and le=='':
-          ra=ck.inp({'text':'Enter lib extension (for example, 2411d for 2.4.11d): '})
-          le=ra['string'].strip()
+       cus['path_include']=pi+'/include'
 
-          cus['lib_extension']=le
-          cus['lib_extension_configured']='yes'
+       # Check version
+       lst=os.listdir(cus['path_lib'])
+       le=''
+       for fn in lst:
+           if fn.startswith('opencv_core'):
+              j=fn.find('.')
+              if j>0:
+                 le=fn[11:j]
+                 break
 
-       cus['path_bin']=pi+'\\'+ext+'\\'+pp+'\\bin'
-       cus['path_lib']=pi+'\\'+ext+'\\'+pp+'\\lib'
+       cus['path_include']=pi+'/include'
 
-       cus['path_static_lib']=pi+'\\'+ext+'\\'+pp+'\\lib'
-       cus['path_dynamic_lib']=pi+'\\'+ext+'\\'+pp+'\\bin'
+       cus['path_static_lib']=cus['path_lib']
+       cus['path_dynamic_lib']=cus['path_bin']
 
        cus['static_lib']='opencv_core'+le+'.lib'
        cus['dynamic_lib']='opencv_core'+le+'.dll'
@@ -177,9 +232,10 @@ def setup(i):
        env['CK_ENV_LIB_OPENCV_STATIC_LIB_PATH']=cus['path_static_lib']
        env['CK_ENV_LIB_OPENCV_DYNAMIC_LIB_PATH']=cus['path_dynamic_lib']
 
+       s+='\nset PATH='+cus['path_bin']+';%PATH%\n'
+
     else:
-       cus['path_bin']=pi+'/bin'
-       cus['path_lib']=pi+'/lib'
+       cus['path_lib']=pl
 
        cus['path_include']=pi+'/include'
 
